Implemented Likes in the Blog Post

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1080,4 +1080,30 @@ h1 {
 }
 
 
+/* =======================================tooltip like section============================== */
 
+.like-section .btn {
+  position: relative;
+  
+}
+
+.like-section .btn::after {
+  content: attr(title);
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 4px;
+  white-space: nowrap;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.like-section .btn:hover::after {
+  visibility: visible;
+  opacity: 1;
+}
